fix: adjust list-entry style + commonize list-* spacings

--- a/src/assets/stylesheets/variables/_variables.sizes.scss
+++ b/src/assets/stylesheets/variables/_variables.sizes.scss
@@ -13,3 +13,6 @@ $size-inbox-topbar-height: 60px;
 $size-inbox-form-height: 65px;
 
 $size-base-action-padding-sides: 8px;
+
+$size-list-item-icon-padding-inline-end: 7px;
+$size-list-item-details-margin-inline-start: 6px;
